name:                nodejs-exec
version:             0.1.0.0
synopsis:            Package providing a nodejs installation.
description:         NodeJS dependency in a .cabal package.
                     Contains a NodeJS version with tailcalls support.
homepage:            https://github.com/lamdu/nodejs-exec
license:             BSD3
license-file:        LICENSE
author:              Yair Chuchem
maintainer:          yairchu@gmail.com
copyright:           2016 Yair
category:            Foreign
build-type:          Custom
cabal-version:       >=1.8
data-files:          bin/node

library
  hs-source-dirs:      src
  Exposed-modules:     System.NodeJS.Path
  Other-modules:       Paths_nodejs_exec
  default-language:    Haskell2010
  build-depends:       base >= 4
